inline/tests/spec/snapshots/parser/verbatim/escaped-verbatim.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'escaped-verbatim' from 'markup/verbatim.yml'"
---
Plain @ (1:1)->(1:17) (
    ␢`not verbatim`␢
    ^^^^^^^^^^^^^^^^
)

---
With input:

\`not verbatim\`


