inline/tests/spec/snapshots/parser/verbatim/not-closed-verbatim.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'not-closed-verbatim' from 'markup/verbatim.yml'"
---
Plain @ (1:1)->(1:16) (
    `not verbatim `
    ^^^^^^^^^^^^^^^
)

---
With input:

`not verbatim `


