inline/tests/spec/snapshots/parser/verbatim/not-opened-verbatim.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'not-opened-verbatim' from 'verbatim.yml'"
---
Plain @ (1:1)->(1:16) (
    ` not verbatim`
)

---
With input:

` not verbatim`


