inline/tests/spec/snapshots/parser/verbatim/not-verbatim.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'not-verbatim' from 'verbatim.yml'"
---
Plain @ (1:1)->(1:17) (
    ` not verbatim `
    ^^^^^^^^^^^^^^^^
)

---
With input:

` not verbatim `


