inline/tests/spec/snapshots/parser/verbatim/simple-verbatim.snap
---
source: inline/tests/parser/mod.rs
info: "Test 'simple-verbatim' from 'markup/verbatim.yml'"
---
Verbatim @ (1:1)->(1:11) (
    ␢Verbatim␢
    ^^^^^^^^^^
)

---
With input:

`Verbatim`


